[gd_scene load_steps=23 format=3 uid="uid://b8v6bs8a5ljms"]

[ext_resource type="Script" uid="uid://gmb4u7pk0wf4" path="res://main/main.gd" id="1_4dugh"]
[ext_resource type="PackedScene" uid="uid://cn5kpnnlktoyk" path="res://player/player.tscn" id="1_53q0u"]
[ext_resource type="PackedScene" uid="uid://c0rsfhevgnt5a" path="res://main/tilemaplayers.tscn" id="1_kfbq2"]
[ext_resource type="Script" uid="uid://c7vu78krn8vld" path="res://ui/CardMenu.gd" id="2_bsumw"]
[ext_resource type="Script" uid="uid://ymdv6p6miydw" path="res://player/minimap.gd" id="5_n3o0a"]
[ext_resource type="Script" uid="uid://cmxx1wuh547kk" path="res://utils/enemy_spawner.gd" id="6_73k8k"]
[ext_resource type="PackedScene" uid="uid://by80wtidg546t" path="res://enemies/wizard_enemy/wizard_enemy.tscn" id="7_4dugh"]
[ext_resource type="Script" uid="uid://sycpmwakfu0s" path="res://main/wave.gd" id="8_67ri8"]
[ext_resource type="Script" uid="uid://c8kynlv130em8" path="res://ui/ui.gd" id="9_0i4oc"]
[ext_resource type="PackedScene" uid="uid://bbp80p4bbfta" path="res://enemies/toxic_enemy/toxic_enemy.tscn" id="9_grrlh"]
[ext_resource type="PackedScene" uid="uid://b3b620ri2ohq8" path="res://enemies/skeleton/skeleton_enemy.tscn" id="11_bsumw"]
[ext_resource type="PackedScene" uid="uid://dbc1j3ls6hqy2" path="res://ui/ability.tscn" id="12_4hmqs"]
[ext_resource type="Texture2D" uid="uid://ty83v5q83j5c" path="res://assets/green_dot.png" id="12_n3o0a"]
[ext_resource type="Script" uid="uid://cj5ebjthfc3rg" path="res://utils/necromancer_spawner.gd" id="12_na0o7"]
[ext_resource type="Texture2D" uid="uid://dj5qvl0c05tf" path="res://assets/radar_frame_corners.png" id="13_n3o0a"]
[ext_resource type="PackedScene" uid="uid://eu6aljdf8e2w" path="res://enemies/necromancer/necromancer_enemy.tscn" id="13_na0o7"]
[ext_resource type="Texture2D" uid="uid://lbxlbptrehts" path="res://assets/circle.png" id="14_piupu"]
[ext_resource type="Texture2D" uid="uid://7ypo4hnkq1g2" path="res://assets/shockwave.png" id="15_q0sk7"]
[ext_resource type="AudioStream" uid="uid://6wx32px0g252" path="res://assets/audio/game (mp3cut.net).mp3" id="20_q0sk7"]

[sub_resource type="PackedScene" id="PackedScene_fwcvl"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("CardMenu", "CanvasLayer", "process_mode", "script", "Background", "ColorRect", "offset_right", "offset_bottom", "MainLayout", "HBoxContainer", "anchors_preset", "anchor_left", "anchor_right", "anchor_bottom", "offset_left", "offset_right", "grow_horizontal", "grow_vertical", "size_flags_horizontal", "size_flags_vertical", "theme_override_constants/separation", "LabelColumn", "VBoxContainer", "layout_mode", "alignment", "Label", "Label", "layout_mode", "text", "vertical_alignment", "Spacer", "Control", "custom_minimum_size", "layout_mode", "Label2", "Label", "layout_mode", "text", "vertical_alignment", "CardContainer", "HBoxContainer", "layout_mode"),
"node_count": 8,
"node_paths": [NodePath("."), NodePath("."), NodePath("./MainLayout"), NodePath("./MainLayout/LabelColumn"), NodePath("./MainLayout/LabelColumn"), NodePath("./MainLayout/LabelColumn"), NodePath("./MainLayout")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 2, 2, 0, 3, 1, 0, 1073741824, 0, 5, 4, -1, 2, 6, 2, 7, 3, 0, 1073741825, 0, 9, 8, -1, 11, 10, 4, 11, 5, 12, 6, 13, 7, 14, 8, 15, 9, 16, 10, 17, 11, 18, 12, 19, 13, 20, 14, 0, 1073741826, 0, 22, 21, -1, 2, 23, 15, 24, 16, 0, 1073741827, 0, 26, 25, -1, 3, 27, 17, 28, 18, 29, 19, 0, 1073741828, 0, 31, 30, -1, 2, 32, 20, 33, 21, 0, 1073741829, 0, 35, 34, -1, 3, 36, 22, 37, 23, 38, 24, 0, 1073741830, 0, 40, 39, -1, 1, 41, 25, 0),
"variants": [3, ExtResource("2_bsumw"), 40.0, 40.0, 13, 0.5, 0.5, 1.0, -72.0, 72.0, 2, 2, 4, 4, 50, 2, 1, 2, "You get", 1, Vector2(0, 100), 2, 2, "Enemy gets
", 1, 2],
"version": 3
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n3o0a"]
radius = 650.0

[sub_resource type="Environment" id="Environment_fwcvl"]
background_mode = 3
adjustment_enabled = true
adjustment_brightness = 0.7
adjustment_contrast = 1.08

[node name="Main" type="Node2D" node_paths=PackedStringArray("waves", "individual") groups=["world"]]
script = ExtResource("1_4dugh")
cardmenu_scene = SubResource("PackedScene_fwcvl")
waves = [NodePath("Wave1"), NodePath("Wave2"), NodePath("Wave3"), NodePath("Wave4")]
individual = NodePath("Player")

[node name="tilemaplayers" parent="." instance=ExtResource("1_kfbq2")]

[node name="Player" parent="." instance=ExtResource("1_53q0u")]
position = Vector2(257, 89)
metadata/_edit_group_ = true

[node name="Radar" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("5_n3o0a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Radar"]
shape = SubResource("CircleShape2D_n3o0a")

[node name="WizardEnemySpawner" type="Node2D" parent="."]
script = ExtResource("6_73k8k")
enabled = false
spawn_interval = 3.0
object_scene = ExtResource("7_4dugh")

[node name="Marker2D" type="Marker2D" parent="WizardEnemySpawner"]
position = Vector2(-532, -124)

[node name="Marker2D2" type="Marker2D" parent="WizardEnemySpawner"]
position = Vector2(503, -162)

[node name="Marker2D3" type="Marker2D" parent="WizardEnemySpawner"]
position = Vector2(119, -167)

[node name="Marker2D4" type="Marker2D" parent="WizardEnemySpawner"]
position = Vector2(1531, 904)

[node name="Marker2D5" type="Marker2D" parent="WizardEnemySpawner"]
position = Vector2(1562, -7)

[node name="Timer" type="Timer" parent="WizardEnemySpawner"]

[node name="ToxicEnemySpawner" type="Node2D" parent="."]
script = ExtResource("6_73k8k")
enabled = false
spawn_interval = 3.0
object_scene = ExtResource("9_grrlh")

[node name="Marker2D" type="Marker2D" parent="ToxicEnemySpawner"]
position = Vector2(1081, 1094)

[node name="Marker2D2" type="Marker2D" parent="ToxicEnemySpawner"]
position = Vector2(1374, 1055)

[node name="Marker2D3" type="Marker2D" parent="ToxicEnemySpawner"]
position = Vector2(1581, 674)

[node name="Marker2D4" type="Marker2D" parent="ToxicEnemySpawner"]
position = Vector2(-600, 157)

[node name="Marker2D5" type="Marker2D" parent="ToxicEnemySpawner"]
position = Vector2(1595, 274)

[node name="Timer" type="Timer" parent="ToxicEnemySpawner"]

[node name="Boundary" type="Node2D" parent="."]

[node name="TopLeft" type="Marker2D" parent="Boundary"]
position = Vector2(-699, -261)

[node name="BottomRight" type="Marker2D" parent="Boundary"]
position = Vector2(1739, 1248)

[node name="Wave1" type="Node2D" parent="." node_paths=PackedStringArray("wave_label", "enemy_spawners")]
script = ExtResource("8_67ri8")
time_in_minutes = 0.5
wave_label = NodePath("../UI/HUD/WaveLabel")
enemy_spawners = [NodePath("../SkeletonSpawner")]
wave_number = 1
metadata/_custom_type_script = "uid://dvr3imeiymvtj"

[node name="Timer" type="Timer" parent="Wave1"]
one_shot = true

[node name="Wave2" type="Node2D" parent="." node_paths=PackedStringArray("wave_label", "enemy_spawners")]
script = ExtResource("8_67ri8")
time_in_minutes = 0.75
wave_label = NodePath("../UI/HUD/WaveLabel")
enemy_spawners = [NodePath("../WizardEnemySpawner"), NodePath("../ToxicEnemySpawner")]
wave_number = 2
metadata/_custom_type_script = "uid://dvr3imeiymvtj"

[node name="Timer" type="Timer" parent="Wave2"]
one_shot = true

[node name="Wave3" type="Node2D" parent="." node_paths=PackedStringArray("wave_label", "enemy_spawners")]
script = ExtResource("8_67ri8")
time_in_minutes = 0.5
wave_label = NodePath("../UI/HUD/WaveLabel")
enemy_spawners = [NodePath("../WizardEnemySpawner"), NodePath("../ToxicEnemySpawner"), NodePath("../SkeletonSpawner")]
wave_number = 3
metadata/_custom_type_script = "uid://dvr3imeiymvtj"

[node name="Timer" type="Timer" parent="Wave3"]
one_shot = true

[node name="Wave4" type="Node2D" parent="." node_paths=PackedStringArray("wave_label", "enemy_spawners")]
script = ExtResource("8_67ri8")
wave_label = NodePath("../UI/HUD/WaveLabel")
enemy_spawners = [NodePath("../WizardEnemySpawner"), NodePath("../ToxicEnemySpawner"), NodePath("../NecromancerSpawner")]
wave_number = 4
metadata/_custom_type_script = "uid://dvr3imeiymvtj"

[node name="Timer" type="Timer" parent="Wave4"]
one_shot = true

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("9_0i4oc")
player = NodePath("../Player")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeartContainer" type="GridContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 8.0
grow_horizontal = 2
scale = Vector2(2, 2)
columns = 5
metadata/_edit_use_anchors_ = true

[node name="TimeLabel" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 22.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "00:00"
horizontal_alignment = 1

[node name="PointLabel" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_right = -10.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Souls:00"
horizontal_alignment = 2

[node name="PointChangeLabel" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 32.0
offset_right = -10.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "+5"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="UI/HUD"]
unique_name_in_owner = true
autostart = true

[node name="WaveLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "wave 1"
horizontal_alignment = 2

[node name="PlayerCards" type="HBoxContainer" parent="UI/HUD"]
process_mode = 3
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 55.0
offset_bottom = 114.0

[node name="EnemyCards" type="HBoxContainer" parent="UI/HUD"]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 74.0
offset_right = -12.0
offset_bottom = 114.0
grow_horizontal = 0

[node name="alt_Ability" parent="UI/HUD" instance=ExtResource("12_4hmqs")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -122.0
offset_right = -15.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
ability_icon = ExtResource("15_q0sk7")
background_texture = ExtResource("14_piupu")

[node name="Label" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minimap" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
scale = Vector2(3, 3)

[node name="PlayerIndicator" type="TextureRect" parent="UI/Minimap"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -31.0
offset_right = 5.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_n3o0a")

[node name="Frame" type="TextureRect" parent="UI/Minimap"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -42.0
offset_right = 16.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_n3o0a")

[node name="SkeletonSpawner" type="Node2D" parent="."]
script = ExtResource("6_73k8k")
enabled = false
spawn_interval = 2.0
object_scene = ExtResource("11_bsumw")
metadata/_custom_type_script = "uid://b5552tr2dxl85"

[node name="Marker2D" type="Marker2D" parent="SkeletonSpawner"]
position = Vector2(-479, 398)

[node name="Marker2D2" type="Marker2D" parent="SkeletonSpawner"]
position = Vector2(967, -161)

[node name="Marker2D3" type="Marker2D" parent="SkeletonSpawner"]
position = Vector2(679, 1080)

[node name="Marker2D4" type="Marker2D" parent="SkeletonSpawner"]
position = Vector2(-450, 1098)

[node name="Marker2D5" type="Marker2D" parent="SkeletonSpawner"]
position = Vector2(-489, 776)

[node name="Timer" type="Timer" parent="SkeletonSpawner"]

[node name="NecromancerSpawner" type="Node2D" parent="."]
script = ExtResource("12_na0o7")
enabled = false
max_count = 5
spawn_interval = 2.0
object_scene = ExtResource("13_na0o7")
metadata/_custom_type_script = "uid://b5552tr2dxl85"

[node name="Timer" type="Timer" parent="NecromancerSpawner"]

[node name="Marker2D" type="Marker2D" parent="NecromancerSpawner"]
position = Vector2(275, -224)

[node name="Marker2D2" type="Marker2D" parent="NecromancerSpawner"]
position = Vector2(57, 1128)

[node name="Marker2D3" type="Marker2D" parent="NecromancerSpawner"]
position = Vector2(1257, -128)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fwcvl")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("20_q0sk7")
volume_db = -20.0
autoplay = true

[connection signal="destroyed" from="Player" to="." method="_on_player_destroyed"]
[connection signal="player_used_ability" from="Player" to="UI" method="_on_player_player_used_ability"]
[connection signal="body_entered" from="Player/Radar" to="Player/Radar" method="_on_body_entered"]
[connection signal="body_exited" from="Player/Radar" to="Player/Radar" method="_on_body_exited"]
[connection signal="timeout" from="UI/HUD/Timer" to="UI" method="_on_timer_timeout"]
